--- a/content/ec_stories/black-inscription.Rmd
+++ b/content/ec_stories/black-inscription.Rmd
@@ -7,7 +7,24 @@ authors:
   - Dylan and George
 ---
 
-
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242&color=%23aa483f&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false&download=true"></iframe>
 
-As the science of climate change has painted an increasingly dire picture of the near future, the importance of environmental communication has become a hot topic in the environmental movement. While the main takeaways of climate science and the reality of global warming caused by human activities are all but entirely settled, people often aren’t able to fully internalize what this means on a personal level. In Woods Hole, a center of oceanographic studies, a local musical and multimedia performance called Black Inscription took on the challenge of communicating these tough scientific lessons. Carla Khilsted and Matthias Bossi provide insight as to what inspired their creation of a musical production dedicated to ocean science, and how science and art can play entirely complementary roles in the future of environmental communication. They’re not only part of the Woods Hole community of oceanographic interest, but the evolving community of environmental communicators who utilize visual, poetic, and literary art to make potentially confusing climate science accessible to anyone. At once a massive undertaking of environmental communication and a very personal story of change in oneself, their story balances the timeliness of their subject matter with the deeper timelessness of why climate science matters to everyone.
+As the science of climate change has painted an increasingly dire picture of the near future, the importance of environmental communication has become a hot topic in the environmental movement. While the main takeaways of climate science and the reality of global warming caused by human activities are all but entirely settled, people often aren’t able to fully internalize what this means on a personal level. 
+
+<figure style = "width:100%">
+<img src ="/ec_stories/black-inscription/BI 19-61.JPG">
+<figcaption>
+<p>Visuals projected during the recent performance of Black Inscription</p>
+</figcaption>
+</figure>
+
+<figure>
+<img src ="/ec_stories/black-inscription/BI 19-87.JPG">
+<figcaption>
+<p>Matthias Bossi and Carla Kihlstedt during rehursals</p>
+</figcaption>
+</figure>
+
+In Woods Hole, a center of oceanographic studies, a local musical and multimedia performance called Black Inscription took on the challenge of communicating these tough scientific lessons. Carla Khilsted and Matthias Bossi provide insight as to what inspired their creation of a musical production dedicated to ocean science, and how science and art can play entirely complementary roles in the future of environmental communication. They’re not only part of the Woods Hole community of oceanographic interest, but the evolving community of environmental communicators who utilize visual, poetic, and literary art to make potentially confusing climate science accessible to anyone. At once a massive undertaking of environmental communication and a very personal story of change in oneself, their story balances the timeliness of their subject matter with the deeper timelessness of why climate science matters to everyone.
+
+<iframe width = "800" height ="450" src="https://www.youtube.com/embed/Gs_aNPrIJoI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
