--- a/content/ec_stories/right-whales.Rmd
+++ b/content/ec_stories/right-whales.Rmd
@@ -11,8 +11,22 @@ authors:
 
 Everybody enjoys peace and quiet. It gives us the ability to have a quiet conversation, to clear the mind, and to focus. At times it can be hard to find this silence, but once the sound is drowned out relief is found.
 
+<figure>
+<img src ="/ec_stories/right-whales/greenbaum_fischer_photo1.JPG">
+<figcaption>
+<p>The North Atlantic Right Whale feeding</p>
+</figcaption>
+</figure>
+
 For some people their quiet place may be the sea, a place where waves gently land on silky shores. To set the mind free over the infinite horizon that belongs to the ocean can be therapeutic. But silence on the surface is not copied below the waves. Below the surface, sounds can travel for far longer than above and there are no places to escape it.
 
 The sea has been polluted with human noises from things like oil drilling, ships, and naval sonar use. These causes can have detrimental consequences for animals that rely on sound to communicate and hunt. Whales are particularly vulnerable to the effects of noise pollution, specifically the North Atlantic right whale.
+
+<figure style = "float:right;margin:1em 0 0 2em;">
+<img src ="/ec_stories/right-whales/greenbaum_fischer_photo3.jpg">
+<figcaption>
+<p>Genevieve Davis analyzing sounds from the sea durng fieldwork</p>
+</figcaption>
+</figure>
 
 According to scientists he North Atlantic right whale is a critically endangered species and there are only about 400 or so of them left. Fortunately for them, there are people who have dedicated their lives to the right whale in research and solutions to protect them. Genevieve Davis is a baleen whale acoustics expert at NOAA. She shares her knowledge of the right whale with and delivers advice on how people can be mindful in protecting them as a consumer. 
