--- a/content/ec_stories/wastewater.Rmd
+++ b/content/ec_stories/wastewater.Rmd
@@ -9,7 +9,14 @@ authors:
 
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242&color=%23aa483f&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false&download=true"></iframe>
 
-TThe local wastewater treatment plant probably isn’t the first place you’d choose to spend a Saturday afternoon. But as algal blooms devoured the oxygen in Falmouth’s ponds and the fish floated belly-up, the coastal town’s idyllic waters started to smell worse than the treatment plant. A day with the wastewater might not seem so bad after all.
+The local wastewater treatment plant probably isn’t the first place you’d choose to spend a Saturday afternoon. But as algal blooms devoured the oxygen in Falmouth’s ponds and the fish floated belly-up, the coastal town’s idyllic waters started to smell worse than the treatment plant. A day with the wastewater might not seem so bad after all.
+
+<figure>
+<img src ="/ec_stories/wastewater/Ahring_Pollack_Photo2.jpg">
+<figcaption>
+<p>Amy Lowell, Falmouth Wastewater Superintendent, explains nitrogen removal at the treatment plant
+</p></figcaption>
+</figure>
 
 Decades-long resistance to sewering in Falmouth meant the town continued to depend on residential septic systems. Nitrogen poured from those septic systems into the ponds, feeding the algae blooms that choked out aquatic life.
 
