--- a/content/ec_stories/coonamessett.Rmd
+++ b/content/ec_stories/coonamessett.Rmd
@@ -20,4 +20,6 @@ The story of the Coonamessett river in Cape Cod could have been one of a group o
 
 With the contribution of dozens of persons, the process of ecological restoration is showing impressive results. This river used to function as a bridge between freshwater and saltwater ecosystems. This was important for fish species, such as the American eel and river herring, that spend a part of their lifetime in the river and another one at sea. The building of dams blocked the passage for traveling fish and the sanding of the river made them prone to danger. The restoration has removed the stressors, building a suitable place for fish to live and migrate. Native plants are also growing, so there’s more food for bees and other insects. More fish, insects and plants make the area interesting for birds. People are happy too. You see them walking dogs and birding. Kids are getting involved adopting river herring and drawing their favorite fish. Turns out removing the stressors to let nature take over has allowed the community to take ownership of the project and to feel it’s important.
 
-<iframe width="800" height="450" src="https://www.youtube.com/embed/NFX03Qx1vn4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div style="padding:56.25% 0 0 0;position:relative;">
+<iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="https://www.youtube.com/embed/NFX03Qx1vn4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
