--- a/content/_index.Rmd
+++ b/content/_index.Rmd
@@ -1,15 +1,16 @@
 ---
-title: Behind the Scenery
+title: "Climate and Society"
+subtitle: "Exploring Human Relationships to the Ocean at SEA Semester"
+image: '/images/city.jpg'
+subpages:
+  - about
+  - radio
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, error = FALSE)
 library(leaflet)
 ```
-
-### Stories of Environmental Change on Cape Cod
-
-The following stories were produced by the Fall 2019 [SEA Semester](https://www.sea.edu) program, Climate and Society. Student teams had just 6 weeks to report on a local environmentak project on Cape Cod. [Read more...](../about/)
 
 
 <!-- <div class="row-full" style="height: 500px;"> -->
