--- a/content/ec_stories/_index.Rmd
+++ b/content/ec_stories/_index.Rmd
@@ -1,6 +1,8 @@
 ---
-title: Behind the Scenery
+title: "Behind the Scenery"
+tagline: "Radio stories about environmental change on Cape Cod"
 image: '/images/cape_cod2.jpeg'
+feature: 3
 ---
 
 ```{r setup, include=FALSE}
@@ -10,17 +12,6 @@ library(leaflet)
 
 ### Stories of Environmental Change on Cape Cod
 
-The following stories were produced by the Fall 2019 [SEA Semester](https://www.sea.edu) program, Climate and Society. Student teams had just 6 weeks to report on a local environmentak project on Cape Cod. [Read more...](../about/)
+The following stories were produced by the Fall 2019 [SEA Semester](https://www.sea.edu) program, [Climate and Society](../about/).
 
-
-<!-- <div class="row-full" style="height: 500px;"> -->
-
-<!-- ```{r, out.width="100%", out.height= "100%"} -->
-<!-- leaflet(options = leafletOptions(zoomControl = FALSE, -->
-<!--                                  maxZoom = 9, -->
-<!--                                  minZoom = 9)) %>% -->
-<!--   addProviderTiles("Esri.OceanBasemap") %>% -->
-<!--    setView(-70.2, 41.6, zoom = 9) -->
-<!-- ``` -->
-
-<!-- </div> -->
+As part of their *Environmental Communication* class during the shore component, student teams had just 6 weeks to report on a local environmental project on Cape Cod.
