--- a/content/ec_stories/coonamessett.Rmd
+++ b/content/ec_stories/coonamessett.Rmd
@@ -2,13 +2,10 @@
 title: "A River Reborn"
 image: /ec_stories/coonamessett/Murgueitio_Strand_photo3.jpg
 tags: radio
-radio_url: https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242
+radio_id: 66722939
 authors:
   - Amalia and Sarah
 ---
-
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242&color=%23aa483f&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false&download=true&show_artwork=false"></iframe>
 
 The story of the Coonamessett river in Cape Cod could have been one of a group of humans dismantling a natural environment. In the last three centuries, the Coonamessett has been profoundly modified. First, by the creation of dams blocking the river done by the grist mill industry. Later, by the sanding of the river for growing cranberries. However, this isn’t just a story about how people managed to disrupt a nice flowing river so badly that all that was left was a bunch of scattered ponds. It’s also a story of how, with gigantic effort, a community decided to unwind the clock to bring a river back to life. Betsy Gladfelter, a coral reef scientist and a town conservation commissioner, has taken leadership for the Coonamesset River restoration project. 
 
