--- a/content/ec_stories/wastewater.Rmd
+++ b/content/ec_stories/wastewater.Rmd
@@ -2,6 +2,7 @@
 title: "Fixing Nitrogen"
 image: /ec_stories/wastewater/Ahring_Pollack_Photo4.JPG
 tags: radio
+tagline: "How does a town deal with all its pee?"
 radio_url: https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242
 authors:
   - Amelia and Nicole
