--- a/content/ec_stories/carbon-bank.Rmd
+++ b/content/ec_stories/carbon-bank.Rmd
@@ -2,6 +2,7 @@
 title: "Banking Carbon"
 image: /ec_stories/carbon-bank/Anderson_Aghbar_Photo2.jpg
 tags: radio
+tagline: "Using our coastal wetlands to draw down carbon dioxide"
 radio_url: https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242
 authors:
   - Maia and Mujahed
