--- a/content/ec_stories/coonamessett.Rmd
+++ b/content/ec_stories/coonamessett.Rmd
@@ -2,6 +2,7 @@
 title: "A River Reborn"
 image: /ec_stories/coonamessett/Murgueitio_Strand_photo3.jpg
 tags: radio
+tagline: "How do we reclaim a natural system after years of human use?"
 radio_id: 66722939
 authors:
   - Amalia and Sarah
