--- a/content/ec_stories/ocean-heat-waves.Rmd
+++ b/content/ec_stories/ocean-heat-waves.Rmd
@@ -2,6 +2,7 @@
 title: "Building Bridges Over Warming Waters"
 image: /ec_stories/ocean-heat-waves/Sheldon_Clausen_photo3.JPG
 tags: radio
+tagline: "Scientists and Fishermen working together to understand a changing ocean"
 radio_url: https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242
 authors:
   - Jessie and Rachel
