--- a/content/ec_stories/right-whales.Rmd
+++ b/content/ec_stories/right-whales.Rmd
@@ -2,6 +2,7 @@
 title: "Echos of the End"
 image: /ec_stories/right-whales/greenbaum_fischer_photo4.jpg
 tags: radio
+tagline: "How noise polution is hurting Northern Right Whales"
 radio_url: https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242
 authors:
   - Derek and Natalie
