--- a/content/ec_stories/shell-day.Rmd
+++ b/content/ec_stories/shell-day.Rmd
@@ -2,6 +2,7 @@
 title: "Shells Under Threat"
 image: /ec_stories/shell-day/shell_day_cover.png
 tags: radio
+tagline: "Ocean Acidification comes to visit Cape Cod"
 radio_url: https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242
 authors:
   - Mathilde and June
