--- a/content/ec_stories/black-inscription.Rmd
+++ b/content/ec_stories/black-inscription.Rmd
@@ -3,12 +3,10 @@ title: "Black Inscription"
 image: /ec_stories/black-inscription/black_inscription.jpg
 tagline: "Telling stories about the ocean through music"
 tags: radio
-radio_url: https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242
+radio_id: 711745120
 authors:
   - Dylan and George
 ---
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242&color=%23aa483f&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false&download=true"></iframe>
 
 As the science of climate change has painted an increasingly dire picture of the near future, the importance of environmental communication has become a hot topic in the environmental movement. While the main takeaways of climate science and the reality of global warming caused by human activities are all but entirely settled, people often aren’t able to fully internalize what this means on a personal level. 
 
