--- a/content/ec_stories/ocean-heat-waves.Rmd
+++ b/content/ec_stories/ocean-heat-waves.Rmd
@@ -3,13 +3,10 @@ title: "Building Bridges Over Warming Waters"
 image: /ec_stories/ocean-heat-waves/Sheldon_Clausen_photo3.JPG
 tags: radio
 tagline: "Scientists and Fishermen working together to understand a changing ocean"
-radio_url: https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242
+radio_id: 711745096
 authors:
   - Jessie and Rachel
 ---
-
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242&color=%23aa483f&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false&download=true"></iframe>
 
 This summer, fisherman on the cape encountered a surprising catch. Traps hauled aboard were full of lifeless lobsters. Upon further investigation, this die-off was attributed to changes in the ocean’s temperature, more specifically, an ocean heat wave.
 
