--- a/content/ec_stories/oysters.Rmd
+++ b/content/ec_stories/oysters.Rmd
@@ -3,13 +3,10 @@ title: "A New Take on an Old Tradition"
 image: /ec_stories/oysters/Solorio_Ockene_photo3.jpg
 tags: radio
 tagline: "Using oysters to mop up polution"
-radio_url: https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242
+radio_id: 711745075
 authors:
   - Naomi and Mollie
 ---
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242&color=%23aa483f&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false&download=true"></iframe>
-
 
 Oysters are an icon of Cape Cod. Tourists flock here in the summer to find the best shellfish in town, enjoy evenings at oyster bars, and even try their hand at oyster picking themselves. But the Falmouth Municipal Shellfish Propagation Program is giving these small animals a whole new life here, growing them to both control pollution and bolster local aquaculture industry. 
 
