--- a/content/ec_stories/shell-day.Rmd
+++ b/content/ec_stories/shell-day.Rmd
@@ -3,12 +3,10 @@ title: "Shells Under Threat"
 image: /ec_stories/shell-day/shell_day_cover.png
 tags: radio
 tagline: "Ocean Acidification comes to visit Cape Cod"
-radio_url: https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242
+radio_id: 711745051
 authors:
   - Mathilde and June
 ---
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242&color=%23aa483f&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false&download=true"></iframe>
 
 Ocean Acidification is a progressing issue in the face of climate change. Jenny Rheuben is a Research Associate with the Woods Hole Oceanographic Institution who focuses on the effects of climate change on coastal environments. Here, Rhueban speaks to the threat of ocean acidification, an example of how climate change impacts our natural resources and how people are in turn affected by that.
 
