--- a/content/ec_stories/wastewater.Rmd
+++ b/content/ec_stories/wastewater.Rmd
@@ -3,12 +3,10 @@ title: "Fixing Nitrogen"
 image: /ec_stories/wastewater/Ahring_Pollack_Photo4.JPG
 tags: radio
 tagline: "How does a town deal with all its pee?"
-radio_url: https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242
+radio_id: 711745156
 authors:
   - Amelia and Nicole
 ---
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176479242&color=%23aa483f&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false&download=true"></iframe>
 
 The local wastewater treatment plant probably isn’t the first place you’d choose to spend a Saturday afternoon. But as algal blooms devoured the oxygen in Falmouth’s ponds and the fish floated belly-up, the coastal town’s idyllic waters started to smell worse than the treatment plant. A day with the wastewater might not seem so bad after all.
 
