--- a/content/radio/black-inscription.Rmd
+++ b/content/radio/black-inscription.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Black Inscription"
-image: /radio/black-inscription/black_inscription.jpg
+image: /radio/black-inscription/black_inscription.JPG
 tagline: "Telling stories about the ocean through music"
 tags: radio
 radio_id: 711745120
@@ -11,14 +11,14 @@ authors:
 As the science of climate change has painted an increasingly dire picture of the near future, the importance of environmental communication has become a hot topic in the environmental movement. While the main takeaways of climate science and the reality of global warming caused by human activities are all but entirely settled, people often aren’t able to fully internalize what this means on a personal level. 
 
 <figure style = "width:100%">
-<img src ="/radio/black-inscription/BI 19-61.JPG">
+<img src ="/climateandsociety/radio/black-inscription/BI 19-61.JPG">
 <figcaption>
 <p>Visuals projected during the recent performance of Black Inscription</p>
 </figcaption>
 </figure>
 
 <figure>
-<img src ="/radio/black-inscription/BI 19-87.JPG">
+<img src ="/climateandsociety/radio/black-inscription/BI 19-87.JPG">
 <figcaption>
 <p>Matthias Bossi and Carla Kihlstedt during rehursals</p>
 </figcaption>
