change rheuban name in places

--- a/content/radio/oysters.Rmd
+++ b/content/radio/oysters.Rmd
@@ -2,7 +2,7 @@
 title: "A New Take on an Old Tradition"
 image: /radio/oysters/Solorio_Ockene_photo3.jpg
 tags: radio
-tagline: "Using oysters to mop up polution"
+tagline: "Using oysters to mop up pollution"
 radio_id: 711745075
 authors:
   - Naomi and Mollie
